runtime/pavex_macros/tests/route/fail/unnecessary_non_standard_allow.stderr
error: `GET` is a standard HTTP method. Remove `allow(non_standard_methods)`.
 --> tests/route/fail/unnecessary_non_standard_allow.rs:3:1
  |
3 | #[route(path = "/single", method = "GET", allow(non_standard_methods))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `route` (in Nightly builds, run with -Z macro-backtrace for more info)

error: All the methods you specified are standard HTTP methods. Remove `allow(non_standard_methods)`.
 --> tests/route/fail/unnecessary_non_standard_allow.rs:6:1
  |
6 | #[route(path = "/multiple", method = ["GET", "POST"], allow(non_standard_methods))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `route` (in Nightly builds, run with -Z macro-backtrace for more info)
